--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -10,7 +10,7 @@ $tertiaryColor: #272727;
 $lightWhite: #f3e9ee;
 // $tertiaryColor: #240041;
 // $tertiaryColor: #111d5e;
-$widthAside: 300px;
+$widthAside: 250px;
 
 * {
   margin: 0;
@@ -21,6 +21,8 @@ $widthAside: 300px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #6d6d6d;
+  list-style: none;
+  text-decoration: none;
 }
 
 html,
@@ -63,7 +65,7 @@ h6 {
     padding: 15px 10px;
     background-color: $tertiaryColor;
     img {
-      height: 35px;
+      height: 30px;
       width: auto;
     }
   }
@@ -122,7 +124,6 @@ h6 {
     width: $widthAside;
     padding: 30px 10px;
     background-color: $tertiaryColor;
-    
   }
 
   &__main {
@@ -133,10 +134,10 @@ h6 {
   }
 }
 
-.full_page{
+.full_page {
   position: fixed;
   top: 0;
   left: 0;
-  height: 100%;
+  height: 100vh;
   width: 100%;
 }
