--- a/src/components/Cards/style.scss
+++ b/src/components/Cards/style.scss
@@ -8,7 +8,7 @@
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
       grid-gap: 30px;
-      grid-row-gap: 60px;
+      grid-row-gap: 100px;
       padding: 80px 0 0 0;
 
       .card {
@@ -17,7 +17,7 @@
         border: 1.25px solid rgb(229, 229, 229);
         border-radius: 7px;
         box-shadow: 0 10px 10px 0px rgba(207, 207, 207, 0.5);
-
+        
         .card__movie {
           display: flex;
 
@@ -59,7 +59,7 @@
 
             .movie__overview {
               margin: 10px 0 0 0;
-              font-size: .95em;
+              font-size: 1em;
               font-weight: 400;
             }
           }
@@ -88,7 +88,7 @@
             }
 
             li.cast__actor {
-              height: 90px;
+              height: 100px;
               flex-basis: auto;
               flex-shrink: 0;
               display: flex;
