--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -162,15 +162,15 @@ h6 {
 
   overflow-y: scroll;
 
-  &::-webkit-scrollbar{
+  &::-webkit-scrollbar {
     display: none;
   }
 
-  .informations__footer{
+  .informations__footer {
     margin-top: 30px;
     width: 100%;
 
-    .footer__title{
+    .footer__title {
       font-size: 1.2em;
       font-weight: 500;
       color: #222;
@@ -184,7 +184,45 @@ h6 {
       overflow-x: scroll;
       overflow-y: hidden;
       position: absolute;
-
     }
+  }
+}
+
+.footer {
+  width: 100%;
+  padding: 30px;
+  padding-left: $widthAside + 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column nowrap;
+  background-color: $tertiaryColor;
+
+  .footer__made_by{
+    font-size: 1.4rem;
+    font-weight: 500;
+    color: rgb(209, 209, 209);
+    margin-bottom: 15px;
+
+    a {
+      color: rgb(209, 209, 209);
+      font-size: 1.4rem;
+      font-weight: 600;
+      display: inline-block;
+      z-index: 997;
+      &:after {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 2px;
+        margin-top: 2.5px;
+        background-color: $primaryColor;
+      }
+    }
+  }
+  .footer__credits{
+    font-size: 12px;
+    margin-top: 5px;
+
   }
 }
