--- a/src/components/Movie/style.scss
+++ b/src/components/Movie/style.scss
@@ -1,7 +1,6 @@
 $lightWhite: #f3e9ee;
 
 .full_page.movie {
-
   .movie__content {
     height: 100%;
     width: 100%;
@@ -39,7 +38,6 @@ $lightWhite: #f3e9ee;
       flex: 1 0 0;
       padding: 0 30px;
       position: relative;
-      // background-color: khaki;
 
       .informations__title {
         font-size: 2em;
@@ -56,19 +54,27 @@ $lightWhite: #f3e9ee;
       }
 
       .informations__footer {
-
+        .footer__frame {
+          display: flex;
+          align-items: flex-start;
+          padding-bottom: 5px;
+          box-sizing: content-box;
+          height: auto;
           .frame__actor {
+            height: auto;
             margin-right: 20px;
             min-width: 100px;
             display: flex;
             flex-flow: column nowrap;
             align-items: center;
             justify-content: center;
+            position: relative;
             img {
               height: 80px;
               width: 80px;
               border-radius: 100%;
               cursor: pointer;
+              object-fit: cover;
               &:hover + .actor__name {
                 opacity: 1;
               }
@@ -84,9 +90,13 @@ $lightWhite: #f3e9ee;
               border-radius: 5px;
               transition: 0.5s ease-in-out;
               opacity: 0;
+              position: relative;
+              // top: 100%;
+              z-index: 999;
             }
           }
         }
+      }
     }
   }
 }
