--- a/src/components/Cards/style.scss
+++ b/src/components/Cards/style.scss
@@ -8,156 +8,10 @@
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
       grid-gap: 30px;
-      grid-row-gap: 100px;
-      padding: 80px 0 0 0;
+      grid-row-gap: 50px;
+      padding: 20px 0 0 0;
 
-      .cards__card {
-        padding: 20px;
-        background-color: white;
-        border: 1.25px solid rgb(229, 229, 229);
-        border-radius: 7px;
-        box-shadow: 0 10px 10px 0px rgba(207, 207, 207, 0.5);
-        
-        .card__movie {
-          display: flex;
-
-          .movie__poster {
-            height: 250px;
-            display: flex;
-            flex-flow: column nowrap;
-            align-items: center;
-            margin-top: -60px;
-            img {
-              border-radius: 6px;
-              height: 100%;
-              box-shadow: 0 0 10px 0px rgba(160, 160, 160, 0.5);
-            }
-            .movie__rate {
-              min-width: 50px;
-              margin-top: -1em;
-              font-size: 1em;
-              font-weight: bold;
-              text-align: center;
-              color: white;
-              padding: 5px 0;
-              border-radius: 10px;
-            }
-          }
-
-          .movie__content {
-            width: 100%;
-            margin-left: 20px;
-
-            .movie__name {
-              font-size: 1.3rem;
-            }
-
-            .movie__genre {
-              font-size: .9rem;
-              color: #848484;
-            }
-
-            .movie__overview {
-              margin: 10px 0 0 0;
-              font-size: 1rem;
-              font-weight: 400;
-
-              .movie__overview__seemore{
-                cursor: pointer;
-                color: #0000EE;
-                padding: 0 2.5px;
-              }
-            }
-          }
-        }
-
-        .card__movie_footer {
-          height: 65px;
-          margin-top: 30px;
-          padding: 10px 0 0 0;
-          border-top: 1px solid #e0e0e0;
-          position: relative;
-
-          .footer__cast {
-            width: 100%;
-            display: flex;
-            flex-flow: row nowrap;
-            overflow-x: scroll;
-            overflow-y: hidden;
-            -webkit-overflow-scrolling: touch;
-            -ms-overflow-style: -ms-autohiding-scrollbar;
-            padding-left: 30px;
-            position: absolute;
-
-            &::-webkit-scrollbar {
-              display: none;
-            }
-
-            li.cast__person {
-              height: 100px;
-              flex-basis: auto;
-              flex-shrink: 0;
-              display: flex;
-              align-items: center;
-              flex-flow: column nowrap;
-              margin-right: 30px;
-              position: relative;
-              cursor: pointer;
-              img {
-                height: 55px;
-                width: 55px;
-                object-fit: cover;
-                border-radius: 100%;
-                box-sizing: content-box;
-
-                &:hover + .person__name {
-                  opacity: 1;
-                }
-              }
-
-              .person__name {
-                position: absolute;
-                margin-top: 60px;
-                width: 110px;
-                padding: 5px 10px;
-                font-size: 0.75em;
-                font-weight: 400;
-                text-align: center;
-                color: white;
-                border-radius: 5px;
-                opacity: 0;
-                transition: opacity 0.5s;
-                cursor: default;
-                background-color: black;
-              }
-            }
-          }
-        }
-      }
-
-      .cards__no_results{
-        display: none;
-        &__figure{
-          height: 25vh;
-          width: auto;
-          display: flex;
-          justify-content: center;
-          img{
-            height: 100%;
-            width: auto;
-          }
-        }
-        &__message{
-          margin: 50px 0 0 0;
-          font-size: 1.5rem;
-          font-weight: 300;
-          line-height: 1.5;
-          text-align: center;
-          color: rgb(0, 0, 0);
-        }
-      }
-
-      @media (max-width: 1610px) {
+       @media (max-width: 1530px) {
         & {
           grid-template-columns: 1fr 1fr;
         }
@@ -176,30 +30,113 @@
             .card__movie {
               flex-flow: column nowrap;
 
-              .movie__poster{
-                  margin: -60px 0 0 0;
+              .movie__poster {
+                margin: -60px 0 0 0;
               }
 
-              .movie__content{
-                  margin: 20px 0 0 0;
+              .movie__content {
+                margin: 20px 0 0 0;
               }
             }
           }
         }
       }
+
+      .cards__card {
+        background-color: white;
+        display: flex;
+        min-height: 250px;
+        box-shadow: 0 10px 10px 0px rgba(207, 207, 207, 0.5);
+        border-radius: 7px;
+        position: relative;
+
+        img.movie__poster{
+          height: 100%;
+          width: 180px;
+          border-top-left-radius: 7px;
+          border-bottom-left-radius: 7px;
+          position: relative;
+          object-fit: cover;
+        }
+
+        .movie__rate {
+          // display: none;
+          font-weight: bold;
+          font-size: 1em;
+          color: white;
+          text-align: center;
+          position: absolute;
+          padding: 4px 16px;
+          border-radius: 10px;
+          left: 66px;
+          bottom: calc(-1em + 2px);
+        }
+
+        .movie__content {
+          min-height: 100%;
+          width: 100%;
+          padding: 10px 20px;
+
+          .movie__name {
+            font-size: 1.35rem;
+          }
+
+          .movie__genre {
+            margin-top: 2.5px;
+            font-size: 0.9rem;
+            color: #848484;
+          }
+
+          .movie__overview {
+            margin: 10px 0 0 0;
+            font-size: 1rem;
+            font-weight: 400;
+
+            .movie__overview__seemore {
+              cursor: pointer;
+              color: #0000ee;
+              padding: 0 2.5px;
+            }
+          }
+        }
+      }
+
+      .cards__no_results {
+        display: none;
+        &__figure {
+          height: 25vh;
+          width: auto;
+          display: flex;
+          justify-content: center;
+          img {
+            height: 100%;
+            width: auto;
+          }
+        }
+        &__message {
+          margin: 50px 0 0 0;
+          font-size: 1.5rem;
+          font-weight: 300;
+          line-height: 1.5;
+          text-align: center;
+          color: rgb(0, 0, 0);
+        }
+      }
+
+     
     }
 
-    .article__cards--no_grid{
+    .article__cards--no_grid {
       display: flex;
       justify-content: center;
       align-items: center;
       flex-flow: column nowrap;
 
-      .cards__card{
+      .cards__card {
         display: none;
       }
 
-      .cards__no_results{
+      .cards__no_results {
         display: block;
       }
     }
