--- a/src/components/Cards/style.scss
+++ b/src/components/Cards/style.scss
@@ -46,31 +46,33 @@
         background-color: white;
         display: flex;
         min-height: 250px;
-        box-shadow: 0 10px 10px 0px rgba(207, 207, 207, 0.5);
+        // box-shadow: 0 10px 10px 0px rgba(207, 207, 207, 0.5);
         border-radius: 7px;
         position: relative;
 
-        img.movie__poster{
-          height: 100%;
-          width: 180px;
-          border-top-left-radius: 7px;
-          border-bottom-left-radius: 7px;
-          position: relative;
-          object-fit: cover;
+        .movie__poster{
+          img{
+            height: 100%;
+            width: 180px;
+            border-top-left-radius: 7px;
+            border-bottom-left-radius: 7px;
+            position: relative;
+            object-fit: cover;
+          }
+  
+          .movie__rate {
+            font-weight: bold;
+            font-size: 1em;
+            color: white;
+            text-align: center;
+            position: absolute;
+            padding: 4px 16px;
+            border-radius: 10px;
+            left: 66px;
+            bottom: calc(-1em + 2px);
+          }
         }
 
-        .movie__rate {
-          // display: none;
-          font-weight: bold;
-          font-size: 1em;
-          color: white;
-          text-align: center;
-          position: absolute;
-          padding: 4px 16px;
-          border-radius: 10px;
-          left: 66px;
-          bottom: calc(-1em + 2px);
-        }
 
         .movie__content {
           min-height: 100%;
