--- a/src/components/Movie/style.scss
+++ b/src/components/Movie/style.scss
@@ -1,31 +1,48 @@
-$lightWhite: #f3e9ee;
+// $lightWhite: #f3e9ee;
 
 .full_page.movie {
+  background-color: black;
   .movie__content {
     height: 100%;
     width: 100%;
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: column nowrap;
     .content__poster {
-      flex-basis: 400px;
-      height: 100%;
-      width: 400px;
+      height: 500px;
+      width: 100%;
       display: flex;
       flex-flow: column nowrap;
       align-items: center;
       position: relative;
 
-      img {
-        height: 100%;
+      &::after {
+        content: "";
+        position: absolute;
         width: 100%;
+        height: 100%;
+        background: linear-gradient(
+          0deg,
+          rgba(0, 0, 0, 1) 5%,
+          rgba(0, 0, 0, 0.7) 15%,
+          rgba(0, 0, 0, 0.3) 30%,
+          rgba(0, 0, 0, 0) 100%,
+          rgba(255, 255, 255, 0) 100%
+        );
+        // background-color: inherit;
+        display: block;
+      }
+
+      img {
+        width: 100vw;
+        height: 100%;
+        top: 0;
+        object-position: 50% 25%;
         object-fit: cover;
-        border-radius: 12px;
-        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
       }
 
       .poster__rate {
+        display: none;
         min-width: 50px;
-        margin-top: calc(-1.2em + 5px);
         font-size: 1.2em;
         text-align: center;
         color: white;
@@ -36,43 +53,55 @@ $lightWhite: #f3e9ee;
 
     .content__informations {
       flex: 1 0 0;
-      padding: 0 30px;
+      padding: 30px 120px 0;
       position: relative;
+      display: flex;
+      align-items: center;
+      flex-flow: column nowrap;
 
       .informations__title {
-        font-size: 2em;
+        font-size: 3rem;
+        color: white;
+        text-align: center;
       }
+
+      .informations__topic_title{
+        margin: 30px 0 0 0;
+        color: white;
+        text-align: left;
+        width: 100%;
+      }
+
       .informations__genre {
         margin-top: 5px;
         font-size: 1em;
         font-weight: 100;
-        color: #848484;
+        color: white;
       }
       .informations__overview {
-        margin-top: 30px;
+        margin: 10px 0 0 0;
         font-size: 1.2em;
+        color: white;
       }
 
       .informations__footer {
+
         .footer__frame {
-          display: flex;
-          align-items: flex-start;
-          padding-bottom: 5px;
-          box-sizing: content-box;
-          height: auto;
+          display: grid;
+          justify-content: center;
+          grid-template-columns: repeat( auto-fill, minmax(150px, 1fr));
+          margin: 20px 0 0 0;
+          column-gap: 60px;
+          row-gap: 40px;
           .frame__actor {
             height: auto;
-            margin-right: 20px;
-            min-width: 100px;
-            display: flex;
-            flex-flow: column nowrap;
-            align-items: center;
-            justify-content: center;
+            width: 100%;
             position: relative;
             img {
-              height: 80px;
-              width: 80px;
-              border-radius: 100%;
+              height: 200px;
+              width: 100%;
+              border-radius: 7px;
+              margin: 0;
               cursor: pointer;
               object-fit: cover;
               &:hover + .actor__name {
@@ -80,19 +109,14 @@ $lightWhite: #f3e9ee;
               }
             }
             .actor__name {
-              width: 100px;
-              margin: 5px 0 0 0;
-              padding: 5px 8px;
-              background-color: black;
-              font-size: 0.9em;
+              display: block;
+              bottom: 0;
+              width: 100%;
+              font-family: Montserrat;
+              font-size: 1rem;
               text-align: center;
               color: white;
-              border-radius: 5px;
-              transition: 0.5s ease-in-out;
-              opacity: 0;
-              position: relative;
-              // top: 100%;
-              z-index: 999;
+              margin: 5px 0 0 0;
             }
           }
         }
