--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,5 +1,5 @@
 // Montserrat
-@import url("https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,500,700&display=swap");
 // Source Sans Pro
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600&display=swap");
 
@@ -157,7 +157,7 @@ h6 {
   left: 0;
   height: 100vh;
   width: 100%;
-  padding: 60px;
+  // padding: 60px;
   background-color: $lightWhite;
 
   overflow-y: scroll;
@@ -165,26 +165,19 @@ h6 {
   &::-webkit-scrollbar {
     display: none;
   }
+  
+  .informations__topic_title {
+    margin: 30px 0 0 0;
+    font-family: Montserrat;
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: #222;
+  }
 
   .informations__footer {
-    margin-top: 30px;
+    padding: 0;
     width: 100%;
 
-    .footer__title {
-      font-size: 1.2em;
-      font-weight: 500;
-      color: #222;
-    }
-
-    .footer__frame {
-      margin-top: 20px;
-      width: 100%;
-      display: flex;
-      flex-flow: row nowrap;
-      overflow-x: scroll;
-      overflow-y: hidden;
-      position: absolute;
-    }
   }
 
   .full_page__close_button_field{
