--- a/src/components/Person/style.scss
+++ b/src/components/Person/style.scss
@@ -8,10 +8,11 @@ body::-webkit-scrollbar {
   background-color: black;
   max-height: 100vh;
   overflow-y: scroll;
-  padding: 0;
+
   .person__content {
     height: 100%;
     width: 100%;
+    box-sizing: content-box;
     display: flex;
     flex-flow: column nowrap;
 
@@ -28,12 +29,13 @@ body::-webkit-scrollbar {
         // box-shadow: 0 0 10px -4px rgba(0, 0, 0, 0.2);
       }
     }
+
     .content__person_informations {
       flex: 1 0 0;
-      padding: 0 120px;
+      padding: 0 120px 30px;
       position: relative;
 
-      .informations__topic_title{
+      .informations__topic_title {
         color: white;
       }
 
@@ -57,46 +59,68 @@ body::-webkit-scrollbar {
         }
       }
       .informations__biography {
+        width: 100%;
         margin: 10px 0 0 0;
+        text-align: left;
         font-size: 1.3em;
         color: white;
       }
 
       .informations__footer {
-
-        .footer__frame{
+        .footer__frame {
           margin: 20px 0 0 0;
-          display: flex;
-          .frame__movie {
-            margin-right: 20px;
-            min-width: 100px;
+          display: grid;
+          grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+          gap: 30px;
+          .frame__mini_movie {
+            $heigth: 150px;
+            height: $heigth;
+            width: 100%;
             display: flex;
-            flex-flow: column nowrap;
-            align-items: center;
-            justify-content: center;
-  
-            img {
-              width: 80px;
-              height: auto;
-              border-radius: 6px;
-              cursor: pointer;
-  
-              &:hover + .movie__name {
-                opacity: 1;
+
+            .mini_movie__poster {
+              height: 100%;
+              width: $heigth;
+              background-color: black;
+              border-top-left-radius: 7px;
+              border-top-right-radius: 7px;
+              img {
+                height: 100%;
+                width: 100%;
+                object-fit: cover;
+                border-top-left-radius: 7px;
+                border-bottom-left-radius: 7px;
               }
             }
-  
-            .movie__name {
-              width: 100px;
-              margin: 5px 0 0 0;
-              padding: 5px 8px;
-              background-color: black;
-              font-size: 0.9em;
-              text-align: center;
-              color: white;
-              border-radius: 5px;
-              transition: 0.5s ease-in-out;
-              opacity: 0;
+            .mini_movie__content {
+              height: 100%;
+              flex: 1 0 0;
+              padding: 10px;
+              background-color: white;
+              border-top-right-radius: 7px;
+              border-bottom-right-radius: 7px;
+
+              .mini_movie__content__title {
+                font-size: 1rem;
+                color: black;
+              }
+
+              .mini_movie__content__genres {
+                font-size: 0.8rem;
+                font-weight: 400;
+                margin: 0;
+              }
+
+              .mini_movie__content__overview {
+                font-size: 0.8rem;
+                margin: 5px 0 0 0;
+
+                .mini_movie__seemore {
+                  cursor: pointer;
+                  color: #0000ee;
+                  padding: 0 2.5px;
+                }
+              }
             }
           }
         }
