--- a/src/components/AsideMenu/style.scss
+++ b/src/components/AsideMenu/style.scss
@@ -5,8 +5,12 @@ $tertiaryColor: #272727;
 $lightWhite: #f3e9ee;
 $widthAside: 250px;
 
-.section__aside{
-  
+.section__aside {
+  min-height: calc(100vh - 60px);
+  width: $widthAside;
+  padding: 30px 10px;
+  background-color: $tertiaryColor;
+
   .aside__content {
     display: flex;
     align-items: center;
@@ -23,14 +27,14 @@ $widthAside: 250px;
       list-style: none;
       overflow-y: scroll;
 
-      .aside__menu__title{
-        opacity: .8;
+      .aside__menu__title {
+        opacity: 0.8;
         letter-spacing: 0.75px;
         margin: 50px 0 15px 0;
         font-weight: 500;
         color: white;
 
-        &:first-child{
+        &:first-child {
           margin-top: 0;
         }
       }
@@ -43,7 +47,7 @@ $widthAside: 250px;
         margin-bottom: 20px;
         color: white;
         opacity: 0.5;
-        transition: opacity .5s ease-in-out;
+        transition: opacity 0.5s ease-in-out;
         cursor: pointer;
 
         .menu__item__icon {
@@ -52,77 +56,100 @@ $widthAside: 250px;
           position: relative;
           img {
             height: 100%;
-            transition: opacity .5s ease-in-out;
+            transition: opacity 0.5s ease-in-out;
           }
 
-          .icon--transition{
+          .icon--transition {
             position: absolute;
             opacity: 0;
           }
-
         }
-        &:hover{
+        &:hover {
           opacity: 1;
-          img{
+          img {
             opacity: 0;
           }
-          .icon--transition{
+          .icon--transition {
             opacity: 1;
           }
-          .radio__label{
+          .radio__label {
             opacity: 1;
           }
         }
       }
 
-      .menu__item--checked{
+      .menu__item--checked {
         opacity: 1;
-        .menu__item__icon{
-          img{
+        .menu__item__icon {
+          img {
             opacity: 0;
           }
-          .icon--transition{
+          .icon--transition {
             opacity: 1;
           }
         }
       }
 
-      li.menu__item--checkbox{
+      li.menu__item--checkbox {
         opacity: 1;
 
-        .checkbox__label{
+        .checkbox__label {
           cursor: pointer;
           color: white;
           font-size: 23px;
           display: flex;
           align-items: center;
-          opacity: .5;
-          transition: .5s ease-in-out;
+          opacity: 0.5;
+          transition: 0.5s ease-in-out;
 
-          &:before{
-            content: '';
+          &:before {
+            content: "";
             display: inline-block;
             height: 15px;
             width: 15px;
-            margin-right: 23px; // 15px for spacing + 7px because the difference between radio and icon 
+            margin-right: 23px; // 15px for spacing + 7px because the difference between radio and icon
             border-radius: 100%;
             border: 2px solid white;
-            transition: background .25s ease-in-out;
+            transition: background 0.25s ease-in-out;
           }
         }
 
-        input{
+        input {
           display: none;
 
-          &:checked + .checkbox__label{
+          &:checked + .checkbox__label {
             opacity: 1;
-            &:before{
+            &:before {
               background-color: white;
             }
           }
-
         }
       }
     }
   }
+
+  @media (max-width: 775px) {
+    z-index: 999;
+    position: fixed;
+    left: inherit;
+    right: $widthAside * -1;
+    transition: .35s right;
+    div.aside__content {
+      display: flex;
+      justify-content: flex-end;
+      background-color: transparent;
+      left: inherit;
+      ul.aside__menu{
+        display: flex;
+        flex-flow: column nowrap;
+        background-color: $tertiaryColor;
+        position: fixed;
+      }
+    }
+  }
+}
+
+.section__aside--mobile_visible{
+    right: 0;
+    transition: .35s right;
 }
