--- a/src/components/Movie/style.scss
+++ b/src/components/Movie/style.scss
@@ -15,6 +15,10 @@
       align-items: center;
       position: relative;
 
+      @media (max-width: 775px) {
+        height: 400px;
+      }
+
       &::after {
         content: "";
         position: absolute;
@@ -39,16 +43,6 @@
         object-position: 50% 25%;
         object-fit: cover;
       }
-
-      .poster__rate {
-        display: none;
-        min-width: 50px;
-        font-size: 1.2em;
-        text-align: center;
-        color: white;
-        padding: 5px 0;
-        border-radius: 7px;
-      }
     }
 
     .content__informations {
@@ -65,7 +59,7 @@
         text-align: center;
       }
 
-      .informations__topic_title{
+      .informations__topic_title {
         margin: 30px 0 0 0;
         color: white;
         text-align: left;
@@ -75,9 +69,21 @@
       .informations__genre {
         margin-top: 5px;
         font-size: 1em;
+        text-align: center;
         font-weight: 100;
         color: white;
       }
+
+      .informations__rate {
+        font-size: 1em;
+        font-weight: 500;
+        text-align: center;
+        color: white;
+        padding: 5px 10px;
+        border-radius: 7px;
+        margin-top: 10px;
+      }
+
       .informations__overview {
         width: 100%;
         margin: 10px 0 0 0;
@@ -87,14 +93,14 @@
       }
 
       .informations__footer {
-
         .footer__frame {
           display: grid;
           justify-content: center;
-          grid-template-columns: repeat( auto-fill, minmax(150px, 1fr));
+          grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
           margin: 20px 0 0 0;
           column-gap: 60px;
           row-gap: 40px;
+
           .frame__actor {
             height: auto;
             width: 100%;
@@ -111,6 +117,7 @@
                 opacity: 1;
               }
             }
+
             .actor__name {
               display: block;
               bottom: 0;
@@ -122,7 +129,34 @@
               margin: 5px 0 0 0;
             }
           }
+
+          @media(max-width: 420px){
+            justify-content: center;
+            grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+            column-gap: 30px;
+            .frame__actor{
+              text-align: center;
+              img{
+                height: 150px;
+                width: 100%;
+              }
+            }
+          }
         }
+      }
+
+      @media (max-width: 775px) {
+        padding: 30px 80px;
+        .informations__genre {
+          font-size: 1rem;
+          margin-top: 20px;
+        }
+      }
+
+      @media (max-width: 620px) {
+        padding: 30px;
+
+        
       }
     }
   }
