Person page responsiveness

--- a/src/components/Person/style.scss
+++ b/src/components/Person/style.scss
@@ -28,6 +28,15 @@ body::-webkit-scrollbar {
         border-radius: 7px;
         // box-shadow: 0 0 10px -4px rgba(0, 0, 0, 0.2);
       }
+
+      @media(max-width: 420px){
+        margin: 0;
+        img{
+          width: 100%;
+          object-fit: cover;
+          border-radius: 0;
+        }
+      }
     }
 
     .content__person_informations {
@@ -66,12 +75,21 @@ body::-webkit-scrollbar {
         color: white;
       }
 
+      @media(max-width: 775px){
+        padding: 0 60px 30px;
+      }
+
+      @media(max-width: 620px){
+        padding: 0 30px;
+      }
+
       .informations__footer {
         .footer__frame {
           margin: 20px 0 0 0;
           display: grid;
           grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
           gap: 30px;
+
           .frame__mini_movie {
             $heigth: 150px;
             height: $heigth;
@@ -120,6 +138,29 @@ body::-webkit-scrollbar {
                   color: #0000ee;
                   padding: 0 2.5px;
                 }
+              }
+            }
+          }
+
+          @media(max-width: 420px){
+            grid-template-columns: 1fr;
+            .frame__mini_movie{
+              height: auto;
+              flex-flow: column nowrap;
+              .mini_movie__poster{
+                height: 150px;
+                width: 100%;
+                img{
+                  border-radius: 0;
+                  border-top-left-radius: 7px;
+                  border-top-right-radius: 7px;
+                }
+              }
+              .mini_movie__content{
+                height: auto;
+                border-radius: 0;
+                border-bottom-left-radius: 7px;
+                border-bottom-right-radius: 7px;
               }
             }
           }
